# domex-core-

./: Cargo.toml  LICENSE  README.md  cosmos_client_zk.md  identity_poseidon.md  solana_future.md  vault_logic.md  vault_ownership.md
bridge/: eth_client_zk.md
core/: delta_law.md  vault_dapp_model.md
docs/: CROSS_CHAIN.md  GOVERNANCE.md  OVERVIEW.md  QUANTUM_RESISTANCE.md  ROADMAP.md  UX_NOTE.md  VALIDATOR_DAO.md  WITHDRAWALS.md
schema/: order_format.json  proof_payload.json
src/: delta_checker.rs  event_log.rs  order_book.rs  ownership.rs  slushing_logic.rs  vault_logic.rs  vault_raft_adapter.rs  vault_registry.rs
src/BTC/: btc_address_utils.rs  script_generator.rs
src/common/: common_types.rs  delegation.rs  domex_token.rs  fee_model.rs  fuel_engine.rs  identity_utils.rs  merkle_utils.rs  poseidon_utils.rs  proof_hash.rs  token_config.rs  zk_constants.rs  zk_utils.rs
src/core/: balance_snapshot.rs  identity.rs
src/governance/: governance_dao.rs
src/token/: balance_snapshot.rs  fuel_engine.rs  mint_engine.rs  token.rs  token_attestation.rs  token_config.rs  token_merkle.rs  token_state.rs
src/types/: Identity.rs  event_log.rs  order_book.rs  orderbook.rs  register.rs  vault_raft_adapter.rs  vaultlogic.rs  zk_client
src/utils/: poseidon_identity.rs
src/validator/: attestation.rs  attestation_broadcast.rs  attestation_checker.rs  bftcomet_rotation.rs  circuit_constants.rs  code_integrity.rs  deposit_checker.rs  epoch_oracle.rs  global_attestor.rs  global_validator.rs  (+24 more)
zk/: Ponkey2.md  circuit_overview.md  sample_proof.json  verifier_integration.md
(+80 files in other folders)
